🎓🎅 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Glitch!</title>
+    <title>URL Shortener</title>
     <meta name="description" content="A cool thing made with Glitch">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <link id="favicon" rel="icon" href="https://images.freeimages.com/images/large-previews/a2f/mouse-1242875.jpg" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,26 +21,24 @@
   <body>
     <header>
       <h1>
-        Free Code Camp project - URL Shortener
+        URL Shortener
       </h1>
     </header>
 
     <main>
-      <p class="bold">Oh hi,</p>
-      <p>Tell me your hopes and dreams:</p>
-      <form>
-        <input type="text" maxlength="100" placeholder="Dreams!">
-        <button type="submit">Submit</button>
-      </form>
-      <section class="dreams">
-        <ul id="dreams">
-        </ul>
-      </section>
+      <p><b>I take URLs:</b></p>
+      <p><em>https://url-shrt.glitch.me/new/https://www.images.google.com</em></p>
+      <p><em>https://url-shrt.glitch.me/new/https://www.youtube.com</em></p>
+      
+      <p><b>and make them short:</b></p>
+      <p><em>https://url-shrt.glitch.me/HJ7E-D</em></p>
+      <p><em>https://url-shrt.glitch.me/SkYPWw</em></p>
     </main>
 
     <footer>
-      <a href="https://glitch.com">
-        Remix this in Glitch
+      by
+      <a href="https://glitch.com/@darianhk">
+        DarianHK
       </a>
     </footer>
 
