--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,6 @@ body {
 
 h1 {
   font-weight: bold;
-  color: pink;
 }
 
 .bold {
@@ -68,6 +67,7 @@ li {
 }
 
 footer {
+  font-size: 10px;
   margin-top: 50px;
   padding-top: 25px;
   border-top: 1px solid lightgrey;
